# tasktracker-test-project

./: .env_example  .gitignore  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  init.sql  pyproject.toml
main/: celerybeat-schedule  schema.yml
main/main/: celery.py  permissions.py  settings.py  urls.py
main/notifications/: admin.py  models.py  serializers.py  services.py  tasks.py  urls.py  views.py
main/notifications/migrations/: 0001_initial.py  0002_alter_notification_task.py  0002_remove_notification_recipient_list_and_more.py  0003_remove_notification_event_type.py
main/tasktracker/: admin.py  models.py  selectors.py  serializers.py  services.py  urls.py  views.py
main/tasktracker/migrations/: 0001_initial.py  0002_alter_task_executor_remove_task_observers_and_more.py  0002_alter_task_status.py  0003_remove_task_executor_remove_task_observers_and_more.py  0003_rename_next_status_status_set_status.py  0004_alter_task_executor_alter_task_observers.py  0004_task_slug.py  0005_alter_task_slug.py  0006_alter_task_slug.py  0007_alter_task_slug.py  0008_alter_status_next_status.py
main/telegrambot/: bot-start.py
main/telegrambot/management/commands/: start_bot.py
main/user/: admin.py  models.py  selectors.py  serializers.py  services.py  urls.py  views.py
main/user/migrations/: 0001_initial.py  0002_alter_user_telegram.py  0003_alter_user_name_alter_user_telegram.py  0004_user_telegram_chat_id.py
